--- a/stronaglowna.html
+++ b/stronaglowna.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="logo">CholdorTV</div>
       <div class="Lista">
-        <div class="kafelek"><a href="index.html" class="link">Strona Główna</a></div>
+        <div class="kafelek"><a href="stronaglowna.html" class="link">Strona Główna</a></div>
         <div class="kafelek"> <a href="live.html" class="link">Live</a></div>
         <div class="kafelek"> <a href="heroes3.html" class="link">Heroes3</a></div>
         <div class="kafelek"> <a href="https://discord.gg/ANTKuKj" class="link">Discord</a></div>
