--- a/omnie.html
+++ b/omnie.html
@@ -29,15 +29,17 @@
           <a href="omnie.html" class="link">O Mnie</a>
         </div>
       </div>
-      <div>
-        <iframe
-          class="main"
-          src="https://www.youtube.com/embed/4CJW7vWJUbQ"
-          frameborder="0"
-          allowfullscreen="allowfullscreen"
-          data-link="https://www.youtube.com/watch?v=4CJW7vWJUbQ"
-        ></iframe>
+      <div class="kontakt"><p class="title">Witaj!</p>
+<div class="socialmedia">
+  <div class="youtube"><a href="https://www.facebook.com/jakub.cienkuszewski"  class="link1"><img src="css/img/facebook.png" class="ikona"></a></div>
+  <div class="facebook"><a href="https://discord.gg/ANTKuKj"  class="link1"><img src="css/img/discord.png" class="ikona"></a></div>
+  <div class="discord"><a href="http://www.youtube.com/c/Choldor" class="link1"><img src="css/img/youtube.png" class="ikona"></a></div>
+</div>
+<div class="tekst">Nazywam się Jakub i mnieszkam w Koninie. Streamuje Heroes of Might & Magic III Z Rozszerzeniem Horn of the Abyss Online.
+  Gram w tą grę od dziecka, lecz nie czuję się jakimś "prosem", raczej gram dla przyjemności. <br>
+  Można mnie znaleźć na:</div>
+</div>
       </div>
-    </div>
+    
   </body>
 </html>
