--- a/kontakt.html
+++ b/kontakt.html
@@ -5,21 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CholdorTV</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600&family=Lato:wght@300&display=swap" rel="stylesheet"
-    href="css/style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600&family=Lato:wght@300&display=swap"
+      rel="stylesheet"
+      href="css/style.css"
+    />
   </head>
   <body>
     <div class="container">
-        <div class="logo">CholdorTV</div>
-      <div class="Lista">
-        <div class="kafelek"><a href="stronaglowna.html" class="link">Strona Główna</a></div>
-        <div class="kafelek"> <a href="live.html" class="link">Live</a></div>
-        <div class="kafelek"> <a href="heroes3.html" class="link">Heroes3</a></div>
-        <div class="kafelek"> <a href="https://discord.gg/ANTKuKj" class="link">Discord</a></div>
-        <div class="kafelek"> <a href="kontakt.html" class="link">Kontakt</a></div>
-      
+      <div class="logo">CholdorTV</div>
+      <div class="lista">
+        <div class="tile">
+          <a href="index.html" class="link">Strona Główna</a>
+        </div>
+        <div class="tile"><a href="live.html" class="link">Live</a></div>
+        <div class="tile">
+          <a href="heroes3.html" class="link">Heroes3</a>
+        </div>
+        <div class="tile">
+          <a href="https://discord.gg/ANTKuKj" class="link">Discord</a>
+        </div>
+        <div class="tile">
+          <a href="omnie.html" class="link">O Mnie</a>
+        </div>
       </div>
-      
+      <div class="kontakt">
+        <h1>Witam!</h1>
+
+      </div>
     </div>
   </body>
 </html>
