--- a/pierwszekroki.html
+++ b/pierwszekroki.html
@@ -19,16 +19,15 @@
           <a href="index.html" class="link">Strona Główna</a>
         </div>
         <div class="tile"><a href="live.html" class="link">Live</a></div>
-        <div class="tile heroes3">
-          <a href="heroes3.html" class="link">Heroes3</a>
-          <ul class="dropdown-menu">
-            <li class="nav-item">
-              <a href="jakzaintsalowachote.html">jak zainstalować hota</a>
+        <div class="tile">
+          <ol>
+            <li  class="menu"><a href="heroes3.html" class="link">Heroes3</a>
+              <ul class="dropdown-menu">
+                <li class="status"><a href="jakzaintsalowachote.html">jak zainstalować hota</a></li>
+                <li class="status"><a href="pierwszekroki.html">pierwsze kroki</a></li>
+              </ul>
             </li>
-            <li class="nav-item">
-              <a href="pierwszekroki.html">pierwsze kroki</a>
-            </li>
-          </ul>
+          </ol>
         </div>
         <div class="tile">
           <a href="https://discord.gg/ANTKuKj" class="link">Discord</a>
@@ -37,6 +36,7 @@
           <a href="omnie.html" class="link">O Mnie</a>
         </div>
       </div>
+
     </div>
   </body>
 </html>
