--- a/heroes3.html
+++ b/heroes3.html
@@ -23,10 +23,13 @@
           <a href="heroes3.html" class="link">Heroes3</a>
           <ul class="dropdown-menu">
             <li class="nav-item">
-              <a href="jakzaintsalowachote.html">jak zainstalować hota</a>
+              <a href="jakzaintsalowahote.html">jak zainstalować hota</a>
             </li>
             <li class="nav-item">
               <a href="pierwszekroki.html">pierwsze kroki</a>
+            </li>
+            <li class="nav-item">
+              <a href="jakzaintsalowahdmod.html">jak zainstalować HD mod</a>
             </li>
           </ul>
         </div>
@@ -37,6 +40,9 @@
           <a href="omnie.html" class="link">O Mnie</a>
         </div>
       </div>
+    <div>
+      Wpadne ja 
+    </div>
     </div>
   </body>
 </html>
