--- a/omnie.html
+++ b/omnie.html
@@ -19,8 +19,19 @@
           <a href="index.html" class="link">Strona Główna</a>
         </div>
         <div class="tile"><a href="live.html" class="link">Live</a></div>
-        <div class="tile">
+        <div class="tile heroes3">
           <a href="heroes3.html" class="link">Heroes3</a>
+          <ul class="dropdown-menu">
+            <li class="nav-item">
+              <a href="jakzaintsalowahote.html">jak zainstalować hota</a>
+            </li>
+            <li class="nav-item">
+              <a href="pierwszekroki.html">pierwsze kroki</a>
+            </li>
+            <li class="nav-item">
+              <a href="jakzaintsalowahdmod.html">jak zainstalować HD mod</a>
+            </li>
+          </ul>
         </div>
         <div class="tile">
           <a href="https://discord.gg/ANTKuKj" class="link">Discord</a>
@@ -35,9 +46,10 @@
   <div class="facebook"><a href="https://discord.gg/ANTKuKj"  class="link1"><img src="css/img/discord.png" class="ikona"></a></div>
   <div class="discord"><a href="http://www.youtube.com/c/Choldor" class="link1"><img src="css/img/youtube.png" class="ikona"></a></div>
 </div>
-<div class="tekst">Nazywam się Jakub i mnieszkam w Koninie. Streamuje Heroes of Might & Magic III Z Rozszerzeniem Horn of the Abyss Online.
-  Gram w tą grę od dziecka, lecz nie czuję się jakimś "prosem", raczej gram dla przyjemności. <br>
-  Można mnie znaleźć na:</div>
+<div class="tekst"><p>Nazywam się Jakub i mnieszkam w Koninie. Streamuje Heroes of Might & Magic III Z Rozszerzeniem Horn of the Abyss Online.
+Gram w tą grę od dziecka, lecz nie czuję się jakimś "prosem", raczej gram dla przyjemności.</p> 
+  
+</div>
 </div>
       </div>
     
