--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
           <a href="index.html" class="link">Strona Główna</a>
         </div>
         <div class="tile"><a href="live.html" class="link">Live</a></div>
-        <div class="tile">
+        <div class="tile heroes3">
           <a href="heroes3.html" class="link">Heroes3</a>
+          <ul class="dropdown-menu">
+            <li class="nav-item">
+              <a href="jakzaintsalowahote.html">jak zainstalować hota</a>
+            </li>
+            <li class="nav-item">
+              <a href="pierwszekroki.html">pierwsze kroki</a>
+            </li>
+            <li class="nav-item">
+              <a href="jakzaintsalowahdmod.html">jak zainstalować HD mod</a>
+            </li>
+          </ul>
         </div>
         <div class="tile">
           <a href="https://discord.gg/ANTKuKj" class="link">Discord</a>
