--- a/jakzainstalowachdmod.html
+++ b/jakzainstalowachdmod.html
@@ -19,15 +19,19 @@
           <a href="index.html" class="link">Strona Główna</a>
         </div>
         <div class="tile"><a href="live.html" class="link">Live</a></div>
-        <div class="tile">
-          <ol>
-            <li  class="menu"><a href="heroes3.html" class="link">Heroes3</a>
-              <ul class="dropdown-menu">
-                <li class="status"><a href="jakzaintsalowachote.html">jak zainstalować hota</a></li>
-                <li class="status"><a href="pierwszekroki.html">pierwsze kroki</a></li>
-              </ul>
+        <div class="tile heroes3">
+          <a href="heroes3.html" class="link">Heroes3</a>
+          <ul class="dropdown-menu">
+            <li class="nav-item">
+              <a href="jakzaintsalowachote.html">jak zainstalować hota</a>
             </li>
-          </ol>
+            <li class="nav-item">
+              <a href="pierwszekroki.html">pierwsze kroki</a>
+            </li>
+            <li class="nav-item">
+              <a href="jakzaintsalowahdmod.html">jak zainstalować HD mod</a>
+            </li>
+          </ul>
         </div>
         <div class="tile">
           <a href="https://discord.gg/ANTKuKj" class="link">Discord</a>
@@ -36,7 +40,7 @@
           <a href="omnie.html" class="link">O Mnie</a>
         </div>
       </div>
-
+      <div></div>
     </div>
   </body>
 </html>
