--- a/pierwszekroki.html
+++ b/pierwszekroki.html
@@ -19,15 +19,19 @@
           <a href="index.html" class="link">Strona Główna</a>
         </div>
         <div class="tile"><a href="live.html" class="link">Live</a></div>
-        <div class="tile">
-          <ol>
-            <li  class="menu"><a href="heroes3.html" class="link">Heroes3</a>
-              <ul class="dropdown-menu">
-                <li class="status"><a href="jakzaintsalowachote.html">jak zainstalować hota</a></li>
-                <li class="status"><a href="pierwszekroki.html">pierwsze kroki</a></li>
-              </ul>
+        <div class="tile heroes3">
+          <a href="heroes3.html" class="link">Heroes3</a>
+          <ul class="dropdown-menu">
+            <li class="nav-item">
+              <a href="jakzaintsalowahote.html">jak zainstalować hota</a>
             </li>
-          </ol>
+            <li class="nav-item">
+              <a href="pierwszekroki.html">pierwsze kroki</a>
+            </li>
+            <li class="nav-item">
+              <a href="jakzaintsalowahdmod.html">jak zainstalować HD mod</a>
+            </li>
+          </ul>
         </div>
         <div class="tile">
           <a href="https://discord.gg/ANTKuKj" class="link">Discord</a>
@@ -36,7 +40,30 @@
           <a href="omnie.html" class="link">O Mnie</a>
         </div>
       </div>
-
+      <div>
+        <p class="tekst2">
+          Jeżeli jeszcze nie masz zainstalowanej Hoty oraz HD mod odsyłam
+          <a href="jakzaintsalowahote.html" class="link2">Tutaj</a> i
+          <a href="jakzaintsalowahdmod.html" class="link2">Tutaj</a>
+        </p>
+        <p class="tekst2">
+          Żeby zagrać z innymi wystarczy że klikniemy New Game, Multi-Player i
+          poczekalnia online
+        </p>
+        <div class="first-steps-container">
+          <img src="css/img/21.png" class="img6" /><img
+            src="css/img/22.png"
+            class="img6"
+          /><img src="css/img/23.png" class="img6" />
+        </div>
+        <p class="tekst2">Zakładamy Nowe konto, oraz logujemy się</p>
+        <div class="first-steps-container">
+          <img src="css/img/24.png" class="img6" /><img
+            src="css/img/25.png"
+            class="img6"
+          /><img src="css/img/26.png" class="img6" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
