--- a/pierwszekroki.html
+++ b/pierwszekroki.html
@@ -56,7 +56,7 @@
             class="img6"
           /><img src="css/img/23.png" class="img6" />
         </div>
-        <p class="tekst2">Zakładamy Nowe konto, oraz logujemy się</p>
+        <p class="tekst2">Zakładamy Nowe konto, oraz logujemy się.</p>
         <div class="first-steps-container">
           <img src="css/img/24.png" class="img6" /><img
             src="css/img/25.png"
@@ -64,6 +64,12 @@
           /><img src="css/img/26.png" class="img6" />
         </div>
       </div>
+      <footer class="down-line">
+        <p><div>Kontakt: Choldor123@gmail.com</div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Media: <div class="youtube"><a href="https://www.facebook.com/jakub.cienkuszewski"  class="link1"><img src="css/img/facebook.png" class="ikona"></a></div>
+          <div class="facebook"><a href="https://discord.gg/ANTKuKj"  class="link1"><img src="css/img/discord.png" class="ikona"></a></div>
+          <div class="discord"><a href="http://www.youtube.com/c/Choldor" class="link1"><img src="css/img/youtube.png" class="ikona"></a></div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Copyrights by Choldor</p>
+        
+      </footer>
     </div>
   </body>
 </html>
