--- a/index.html
+++ b/index.html
@@ -10,32 +10,47 @@
       rel="stylesheet"
       href="css/style.css"
     />
-    
   </head>
   <body>
-    <button class="hamburger hamburger-active">
+    <button class="hamburger">
       <span class="hamburger-box">
         <span class="hamburger-inner"></span>
       </span>
     </button>
     <div class="nav-mobile">
       <ol class="nav-mobile-list">
-        <li class="nav-mobile-item"><a href="index.html" class="link">Strona Główna</a></li>
-        <li class="nav-mobile-item"><a href="live.html" class="link">Live</a></li>
-        <li class="nav-mobile-item"><a href="heroes3.html" class="link">Heroes3</a>
-          <ul class="dropdown-menu">
-            <li class="nav-item">
-              <a href="jakzaintsalowahote.html">jak zainstalować hota</a>
-            </li>
-            <li class="nav-item">
-              <a href="pierwszekroki.html">pierwsze kroki</a> 
-            </li>
-            <li class="nav-item">
-              <a href="jakzaintsalowahdmod.html">jak zainstalować HD mod</a>
-            </li>
-          </ul></li>
-        <li class="nav-mobile-item"><a href="https://discord.gg/ANTKuKj" class="link">Discord</a></li>
-        <li class="nav-mobile-item"><a href="omnie.html" class="link">O Mnie</a></li>
+        <li class="nav-mobile-item">
+          <a href="index.html" class="link">Strona Główna</a>
+        </li>
+        <li class="nav-mobile-item">
+          <a href="live.html" class="link">Live</a>
+        </li>
+        <li class="nav-mobile-item" > 
+          <a href="heroes3.html" class="link">Heroes3 </a> <img src="css/img/next.svg" class="arrow">
+        </li>
+        <div class="dropdown-list-mobile dropdown-active">
+        <li class="nav-mobile-item">
+          <a href="jakzaintsalowahote.html" class="link"
+            >jak zainstalować hota</a
+          >
+        </li>
+
+        <li class="nav-mobile-item">
+          <a href="pierwszekroki.html" class="link">pierwsze kroki</a>
+        </li>
+
+        <li class="nav-mobile-item">
+          <a href="jakzaintsalowahdmod.html" class="link"
+            >jak zainstalować HD mod</a
+          >
+        </li></div>
+
+        <li class="nav-mobile-item">
+          <a href="https://discord.gg/ANTKuKj" class="link">Discord</a>
+        </li>
+        <li class="nav-mobile-item">
+          <a href="omnie.html" class="link">O Mnie</a>
+        </li>
       </ol>
     </div>
     <div class="container">
