--- a/pierwszekroki.html
+++ b/pierwszekroki.html
@@ -40,7 +40,7 @@
           <a href="omnie.html" class="link">O Mnie</a>
         </div>
       </div>
-      <div>
+      <div class="back-steps">
         <p class="tekst2">
           Jeżeli jeszcze nie masz zainstalowanej Hoty oraz HD mod odsyłam
           <a href="jakzaintsalowahote.html" class="link2">Tutaj</a> i
@@ -64,12 +64,19 @@
           /><img src="css/img/26.png" class="img6" />
         </div>
       </div>
-      <footer class="down-line">
-        <p><div>Kontakt: Choldor123@gmail.com</div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Media: <div class="youtube"><a href="https://www.facebook.com/jakub.cienkuszewski"  class="link1"><img src="css/img/facebook.png" class="ikona"></a></div>
-          <div class="facebook"><a href="https://discord.gg/ANTKuKj"  class="link1"><img src="css/img/discord.png" class="ikona"></a></div>
-          <div class="discord"><a href="http://www.youtube.com/c/Choldor" class="link1"><img src="css/img/youtube.png" class="ikona"></a></div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Copyrights by Choldor</p>
-        
-      </footer>
     </div>
+    <footer class="down-line">
+      <div class="footer-column">
+        <p>Cześć mam na Imię Kuba, więcej na O Mnie</p>
+      </div> 
+      <div class="footer-column">
+        <div class="youtube"><a href="https://www.facebook.com/jakub.cienkuszewski"  class="link1"><img src="css/img/facebook.png" class="ikona"></a></div>
+        <div class="facebook"><a href="https://discord.gg/ANTKuKj"  class="link1"><img src="css/img/discord.png" class="ikona"></a></div>
+        <div class="discord"><a href="http://www.youtube.com/c/Choldor" class="link1"><img src="css/img/youtube.png" class="ikona"></a></div>
+      </div>
+      <div class="footer-column">
+        <img src="css/img/copyright-guidelines.png" class="ikona2"></a>Copyrights by Choldor
+      </div>
+      </footer>
   </body>
 </html>
