--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <li class="nav-mobile-item">
           <a href="live.html" class="link">Live</a>
         </li>
-        <li class="nav-mobile-item" > 
+        <li class="nav-mobile-item dropdown-mobile-item" > 
           <a href="heroes3.html" class="link">Heroes3 </a> <img src="css/img/next.svg" class="arrow">
         </li>
-        <div class="dropdown-list-mobile dropdown-active">
+        <div class="dropdown-list-mobile">
         <li class="nav-mobile-item">
           <a href="jakzaintsalowahote.html" class="link"
             >jak zainstalować hota</a
@@ -40,8 +40,8 @@
         </li>
 
         <li class="nav-mobile-item">
-          <a href="jakzaintsalowahdmod.html" class="link"
-            >jak zainstalować HD mod</a
+          <a href="instalacjaHDmod.html" class="link"
+            >Instalacja HD mod</a
           >
         </li></div>
 
@@ -70,7 +70,7 @@
               <a href="pierwszekroki.html">pierwsze kroki</a>
             </li>
             <li class="nav-item">
-              <a href="jakzaintsalowahdmod.html">jak zainstalować HD mod</a>
+              <a href="jakzaintsalowahdmod.html">Instalacja HD mod</a>
             </li>
           </ul>
         </div>
@@ -81,8 +81,47 @@
           <a href="omnie.html" class="link">O Mnie</a>
         </div>
       </div>
-      <div></div>
+      <div class="main-square">
+        <div class="square1">
+          <div class="square-item square-item-1"> <a href="jakzaintsalowahdmod.html" class="square-link"></a><div class="text">Jak Zainstalować dodatek hota?</div></div>
+          <div class="square-item square-item-2"></div>
+          <div class="square-item square-item-3"></div>
+          <div class="square-item square-item-4"> trololo</div>
+          <div class="square-item square-item-5"></div>
+          <div class="square-item square-item-6"></div>
+        </divJak>
+        <div class="square2">
+
+        </div>
+      </div>
     </div>
+    <footer class="down-line">
+      <div class="footer-items">
+        <div class="footer-column">
+          <p>Cześć mam na Imię Kuba, więcej na </p><a href="omnie.html" class="link3">O Mnie</a>
+        </div>
+        <div class="footer-column">
+          <div class="youtube">
+            <a href="https://www.facebook.com/jakub.cienkuszewski" class="link1"
+              ><img src="css/img/facebook.png" class="ikona"
+            /></a>
+          </div>
+          <div class="facebook">
+            <a href="https://discord.gg/ANTKuKj" class="link1"
+              ><img src="css/img/discord.png" class="ikona"
+            /></a>
+          </div>
+          <div class="discord">
+            <a href="http://www.youtube.com/c/Choldor" class="link1"
+              ><img src="css/img/youtube.png" class="ikona"
+            /></a>
+          </div>
+        </div>
+        <div class="footer-column">
+          ©Copyrights by Choldor
+        </div>
+      </div>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
