--- a/pierwszekroki.html
+++ b/pierwszekroki.html
@@ -29,7 +29,7 @@
               <a href="pierwszekroki.html">pierwsze kroki</a>
             </li>
             <li class="nav-item">
-              <a href="jakzaintsalowahdmod.html">jak zainstalować HD mod</a>
+              <a href="jakzaintsalowahdmod.html">Instalacja HD mod</a>
             </li>
           </ul>
         </div>
@@ -66,17 +66,31 @@
       </div>
     </div>
     <footer class="down-line">
-      <div class="footer-column">
-        <p>Cześć mam na Imię Kuba, więcej na O Mnie</p>
-      </div> 
-      <div class="footer-column">
-        <div class="youtube"><a href="https://www.facebook.com/jakub.cienkuszewski"  class="link1"><img src="css/img/facebook.png" class="ikona"></a></div>
-        <div class="facebook"><a href="https://discord.gg/ANTKuKj"  class="link1"><img src="css/img/discord.png" class="ikona"></a></div>
-        <div class="discord"><a href="http://www.youtube.com/c/Choldor" class="link1"><img src="css/img/youtube.png" class="ikona"></a></div>
+      <div class="footer-items">
+        <div class="footer-column">
+          <p>Cześć mam na Imię Kuba, więcej informacji znajdziesz </p><a href="omnie.html" class="link3">O Mnie</a>
+        </div>
+        <div class="footer-column">
+          <div class="youtube">
+            <a href="https://www.facebook.com/jakub.cienkuszewski" class="link1"
+              ><img src="css/img/facebook.png" class="ikona"
+            /></a>
+          </div>
+          <div class="facebook">
+            <a href="https://discord.gg/ANTKuKj" class="link1"
+              ><img src="css/img/discord.png" class="ikona"
+            /></a>
+          </div>
+          <div class="discord">
+            <a href="http://www.youtube.com/c/Choldor" class="link1"
+              ><img src="css/img/youtube.png" class="ikona"
+            /></a>
+          </div>
+        </div>
+        <div class="footer-column">
+          ©Copyrights by Choldor
+        </div>
       </div>
-      <div class="footer-column">
-        <img src="css/img/copyright-guidelines.png" class="ikona2"></a>Copyrights by Choldor
-      </div>
-      </footer>
+    </footer>
   </body>
 </html>
