--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </li>
 
         <li class="nav-mobile-item">
-          <a href="instalacjaHDmod.html" class="link"
-            >Instalacja HD mod</a
+          <a href="kalkulator.html" class="link"
+            >Kalkulator</a
           >
         </li></div>
 
@@ -70,7 +70,7 @@
               <a href="pierwszekroki.html">pierwsze kroki</a>
             </li>
             <li class="nav-item">
-              <a href="jakzaintsalowahdmod.html">Instalacja HD mod</a>
+              <a href="kalkulator.html" class="link">Kalkulator</a>
             </li>
           </ul>
         </div>
@@ -84,18 +84,21 @@
       <div class="main-square">
         <div class="square1">
           <div class="square-item square-item-1"> <a href="jakzaintsalowahdmod.html" class="square-link"></a><div class="text">Jak Zainstalować dodatek hota?</div></div>
-          <div class="square-item square-item-2"></div>
-          <div class="square-item square-item-3"></div>
-          <div class="square-item square-item-4"> trololo</div>
-          <div class="square-item square-item-5"></div>
-          <div class="square-item square-item-6"></div>
-        </divJak>
+          <div class="square-item square-item-2">Pierwsze kroki</div>
+          <div class="square-item square-item-3">Instalacja HD Mod</div>
+          <div class="square-item square-item-4"> Live</div>
+          <div class="square-item square-item-5">Kalkulator</div>
+          <div class="square-item square-item-6">Ciekawośtki o Jebuss Cross
+          </div>
+        </div>
         <div class="square2">
+          <script src="https://apis.google.com/js/platform.js"></script>
 
+          <div class="g-ytsubscribe" data-channelid="UCuo3m3CeK2NJ92gGE4MCaWw" data-layout="full" data-count="default"></div>
         </div>
       </div>
     </div>
-    <footer class="down-line">
+    <footer class="footer">
       <div class="footer-items">
         <div class="footer-column">
           <p>Cześć mam na Imię Kuba, więcej na </p><a href="omnie.html" class="link3">O Mnie</a>
