--- a/kalkulator.html
+++ b/kalkulator.html
@@ -40,15 +40,26 @@
           <a href="omnie.html" class="link">O Mnie</a>
         </div>
       </div>
-      <div>
-        <iframe
-          class="main"
-          src="https://www.youtube.com/embed/4CJW7vWJUbQ"
-          frameborder="0"
-          allowfullscreen="allowfullscreen"
-          data-link="https://www.youtube.com/watch?v=4CJW7vWJUbQ"
-        ></iframe>
-      </div>
+    <div>
+      <select name="spells" size="w">
+        <option>Magic Arrow</option>
+        <option>Fire Wall</option>
+        <option>Fire Ball</option>
+        <option>Land Mine</option>
+        <option>Armageddon</option>
+        <option>Inferno</option>
+        <option>Lightning Bolt</option>
+        <option>Chain Lightning</option>
+        <option>Ice Bolt</option>
+        <option>Frost Ring</option>
+        <option>Death Ripple</option>
+        <option>Meteor Shower</option>
+        <option>Implosion</option>
+      </select>
+      <button>X</button>
+      <input type="text" id="value">
+      <h2 id="result"></h2>
+    </div>
     </div>
     <footer class="down-line">
       <div class="footer-items">
@@ -76,6 +87,7 @@
           ©Copyrights by Choldor
         </div>
       </div>
-    </footer>>
+    </footer>
+    <script src="js/h3-calculator.js"></script>
   </body>
 </html>
