--- a/kalkulator.html
+++ b/kalkulator.html
@@ -59,19 +59,20 @@
       <label for="spellPower">Spell power:</label>
       <input name="spellPower" type="number" min="1" max="99" id="value" class="spellpower">
       <label for="magic">Magic:</label>
-      <select name="magic" size="w">
+      <select name="magic" size="w" class="magic">
         <option>brak</option>
         <option>ogien</option>
         <option>woda</option>
         <option>powietrze</option>
         <option>ziemia</option>
       </select>
-      <label for="magic">Magic level:</label>
-      <select name="spellLevel" size="w">
+      <div class="hide magic-lvl-container">
+      <label for="magic" >Magic level:</label>
+      <select name="spellLevel" size="w"  class="magic-lvl">
         <option>1</option>
         <option>2</option>
         <option>3</option>
-      </select>
+      </select></div>
       <button class="final-button">Oblicz</button>
       <h2 id="result" class="result"></h2>
     </div>
