--- a/kalkulator.html
+++ b/kalkulator.html
@@ -40,8 +40,8 @@
           <a href="omnie.html" class="link">O Mnie</a>
         </div>
       </div>
-    <div>
-      <select name="spells" size="w" class="spell">
+    <div class="calculate">
+      <div class="book-magic"><select name="spells" size="w" class="spell">
         <option>Magic Arrow</option>
         <option>Fire Wall</option>
         <option>Fire Ball</option>
@@ -55,17 +55,12 @@
         <option>Death Ripple</option>
         <option>Meteor Shower</option>
         <option>Implosion</option>
-      </select>
-      <label for="spellPower">Spell power:</label>
-      <input name="spellPower" type="number" min="1" max="99" id="value" class="spellpower">
+      </select></div>
+      <div><label for="spellPower">Spell power:</label>
+      <input name="spellPower" type="number" min="1" max="99" id="value" class="spellpower"></div>
       <label for="magic">Magic:</label>
-      <select name="magic" size="w" class="magic">
-        <option>brak</option>
-        <option>ogien</option>
-        <option>woda</option>
-        <option>powietrze</option>
-        <option>ziemia</option>
-      </select>
+      <input type="checkbox" class="magic">
+      </input>
       <div class="hide magic-lvl-container">
       <label for="magic" >Magic level:</label>
       <select name="spellLevel" size="w"  class="magic-lvl">
