--- a/kalkulator.html
+++ b/kalkulator.html
@@ -41,7 +41,21 @@
         </div>
       </div>
     <div class="calculate">
-      <div class="book-magic"><select name="spells" size="w" class="spell">
+      <div class="book-magic">
+        <img src="css/img/03_magicarrow.gif" class="img-spell all" >
+        <img src="css/img/25_deathripple.gif" class="img-spell earth">
+        <img src="css/img/14_firewall.gif" class="img-spell fire">
+        <img src="css/img/17_icebolt.gif" class="img-spell water">
+        <img src="css/img/18_lightningbolt.gif" class="img-spell air">
+        <img src="css/img/22_fireball.gif" class="img-spell fire">
+        <img src="css/img/21_frostring.gif" class="img-spell water">
+        <img src="css/img/12_landmine.gif" class="img-spell fire">
+        <img src="css/img/27_armageddon.gif" class="img-spell fire">
+        <img src="css/img/20_chainlightning.gif" class="img-spell air">
+        <img src="css/img/23_inferno.gif" class="img-spell fire">
+        <img src="css/img/24_meteorshower.gif" class="img-spell earth">
+        <img src="css/img/19_implosion.gif" class="img-spell earth">
+        <select name="spells" size="w" class="spell">
         <option>Magic Arrow</option>
         <option>Fire Wall</option>
         <option>Fire Ball</option>
@@ -56,6 +70,14 @@
         <option>Meteor Shower</option>
         <option>Implosion</option>
       </select></div>
+      <div class="magic-select">
+        <img src="css/img/powietrze.png" class="img-magic">
+        <img src="css/img/ziemia.png" class="img-magic">
+        <img src="css/img/ogien.png" class="img-magic magic-fire">
+        <img src="css/img/woda.png" class="img-magic">
+        <img src="css/img/wszystkie czary.png" class="img-all-magic">
+
+      </div>
       <div><label for="spellPower">Spell power:</label>
       <input name="spellPower" type="number" min="1" max="99" id="value" class="spellpower"></div>
       <label for="magic">Magic:</label>
