--- a/kalkulator.html
+++ b/kalkulator.html
@@ -116,9 +116,9 @@
 
     <div class="town-creature">
     <div class="town">
-<img src="css/img/Town_Castle.gif" class="town-img  castle">
+<img src="css/img/Town_Castle.gif" class="town-img  castle town-active">
 <img src="css/img/Town_Rampart.gif" class="town-img rampart">
-<img src="css/img/Town_Tower.gif" class="town-img tower">
+<img src="css/img/Town_Tower.gif" class="town-img tower ">
 <img src="css/img/Town_Inferno.gif" class="town-img inferno">
 <img src="css/img/Town_Necropolis.gif" class="town-img necropolis">
 <img src="css/img/Town_Dungeon.gif" class="town-img dungeon">
@@ -129,20 +129,20 @@
 <img src="css/img/Town_Neutral.gif" class="town-img neutral">
   </div>
   <div class="creature">
-    <img src="css/img/Creature_Halberdier.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Pikeman.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Archer.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Marksman.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Griffin.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Royal_Griffin.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Swordsman.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Crusader.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Monk.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Zealot.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Cavalier.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Champion.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Angel.gif" class="img-creature castle-creature">
-    <img src="css/img/Creature_Archangel.gif" class="img-creature castle-creature">
+    <img src="css/img/Creature_Halberdier.gif" class="img-creature castle-creature creature-active">
+    <img src="css/img/Creature_Pikeman.gif" class="img-creature castle-creature creature-active creatures-active">
+    <img src="css/img/Creature_Archer.gif" class="img-creature castle-creature creature-active">
+    <img src="css/img/Creature_Marksman.gif" class="img-creature castle-creature creature-active">
+    <img src="css/img/Creature_Griffin.gif" class="img-creature castle-creature creature-active">
+    <img src="css/img/Creature_Royal_Griffin.gif" class="img-creature castle-creature creature-active">
+    <img src="css/img/Creature_Swordsman.gif" class="img-creature castle-creature creature-active">
+    <img src="css/img/Creature_Crusader.gif" class="img-creature castle-creature creature-active">
+    <img src="css/img/Creature_Monk.gif" class="img-creature castle-creature creature-active">
+    <img src="css/img/Creature_Zealot.gif" class="img-creature castle-creature creature-active">
+    <img src="css/img/Creature_Cavalier.gif" class="img-creature castle-creature creature-active">
+    <img src="css/img/Creature_Champion.gif" class="img-creature castle-creature creature-active">
+    <img src="css/img/Creature_Angel.gif" class="img-creature castle-creature creature-active">
+    <img src="css/img/Creature_Archangel.gif" class="img-creature castle-creature creature-active">
     <img src="css/img/Creature_Centaur.gif" class="img-creature rampart-creature">
     <img src="css/img/Creature_Centaur_Captain.gif" class="img-creature rampart-creature">
     <img src="css/img/Creature_Dwarf.gif" class="img-creature rampart-creature">
@@ -255,6 +255,21 @@
       <img src="css/img/Creature_Magic_Elemental.gif" class="img-creature conflux-creature">
       <img src="css/img/Creature_Firebird.gif" class="img-creature conflux-creature">
       <img src="css/img/Creature_Phoenix.gif" class="img-creature conflux-creature">
+      <img src="css/img/Creature_Nymph.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Oceanid.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Crew_Mate.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Seaman.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Pirate.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Corsair.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Sea_Dog.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Stormbird.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Ayssid.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Sea_Witch.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Sorceress.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Nix.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Nix_Warrior.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Sea_Serpent.gif" class="img-creature cove-creature">
+      <img src="css/img/Creature_Haspid.gif" class="img-creature cove-creature">
       <img src="css/img/Creature_Peasant.gif" class="img-creature neutral-creature">
       <img src="css/img/Creature_Halfling.gif" class="img-creature neutral-creature">
       <img src="css/img/Creature_Boar.gif" class="img-creature neutral-creature">
@@ -274,8 +289,9 @@
       <img src="css/img/Creature_Rust_Dragon.gif" class="img-creature neutral-creature">
       <img src="css/img/Creature_Crystal_Dragon.gif" class="img-creature neutral-creature">
       <img src="css/img/Creature_Azure_Dragon.gif" class="img-creature neutral-creature">
-   
-   
+  </div>
+  <div class="creature-animation">
+    <img src="css/img/Creature_Azure_Dragon_Animation.gif">
   </div>
 </div>
   </div>
@@ -308,6 +324,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/h3-calculator.js"></script>
+    <script src="js/h3-calculator.js" type="module"></script>
   </body>
 </html>
